force-app/main/default/objects/Remise_Incentive__c/Remise_Incentive__c.object-meta.xml
<CustomObject>
    <label>Remise Incentive</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Remises Incentive</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>