force-app/main/default/objects/Remise_Incentive__c/fields/CodeIncentive__c.field-meta.xml
<CustomField>
    <fullName>CodeIncentive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code Incentive</label>
    <referenceTo>Incentive__c</referenceTo>
    <relationshipLabel>Remises Incentive</relationshipLabel>
    <relationshipName>Remises_Incentive</relationshipName>
    <type>Lookup</type>
</CustomField>