force-app/main/default/objects/Remise_Incentive__c/fields/CoefficientRemise__c.field-meta.xml
<CustomField>
    <fullName>CoefficientRemise__c</fullName>
    <label>Coefficient Remise</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>