force-app/main/default/objects/Remise_Incentive__c/fields/MontantPlafond__c.field-meta.xml
<CustomField>
    <fullName>MontantPlafond__c</fullName>
    <description>Montant plafond du pallier
GC_iremise.rem_mtfin_ht</description>
    <label>Montant Plafond</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>