force-app/main/default/objects/Remise_Incentive__c/fields/MontantPlancher__c.field-meta.xml
<CustomField>
    <fullName>MontantPlancher__c</fullName>
    <description>Montant plancher du pallier
GC_iremise.rem_mtdeb_ht</description>
    <label>Montant Plancher</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>